[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://models/Spaceship/IntroInterior.glb" type="PackedScene" id=2]
[ext_resource path="res://models/FemaleCharacter/FemaleCharacter.tscn" type="PackedScene" id=3]
[ext_resource path="res://themes/default/default.theme" type="Theme" id=4]
[ext_resource path="res://fonts/mechsuit_main_title.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/mechsuit.tres" type="DynamicFont" id=6]
[ext_resource path="res://scenes/Credits/Credits.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/Options/Options.tscn" type="PackedScene" id=8]
[ext_resource path="res://music/main_menu.ogg" type="AudioStream" id=9]

[sub_resource type="Environment" id=1]
background_mode = 1

[sub_resource type="Animation" id=2]
resource_name = "alarm"
loop = true
step = 0.05
tracks/0/type = "transform"
tracks/0/path = NodePath("Spatial/Alarm")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 2.674, 1.989, 0.502, 0.707107, 0, 0, 0.707107, 1, 1, 1, 0.25, 1, 2.674, 2.029, 0.502, 0.5, -0.5, -0.5, 0.5, 1, 1, 1, 0.5, 1, 2.674, 2.029, 0.502, -1.54543e-008, 0.707107, 0.707107, 4.63629e-008, 1, 1, 1, 0.75, 1, 2.674, 2.029, 0.502, 0.5, 0.5, 0.5, 0.5, 1, 1, 1 )

[node name="MainMenu" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Spatial" type="Spatial" parent="."]

[node name="SpaceShip" parent="Spatial" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0499115, -0.0235028, -0.0199242 )

[node name="Camera" type="Camera" parent="Spatial"]
transform = Transform( 0.95356, 0.00405872, 0.301176, -0.000580815, 0.999932, -0.0116364, -0.301203, 0.0109211, 0.953497, 7.81741, 0.916915, 5.70438 )
fov = 45.0

[node name="SpotLight" type="SpotLight" parent="Spatial"]
transform = Transform( 0.997368, 0.0475997, -0.0546973, 0, 0.754354, 0.656468, 0.0725088, -0.65474, 0.752369, 6.32368, 2.70527, 5.17195 )
light_energy = 2.0
shadow_enabled = true
spot_range = 5.82356
spot_angle = 35.0107

[node name="DirectionalLight" type="DirectionalLight" parent="Spatial"]
transform = Transform( 0.549802, 0.545781, -0.63233, 3.38731e-008, 0.757013, 0.653399, 0.835295, -0.35924, 0.416208, -4, 5.10575, 5.69291 )
layers = 0
light_color = Color( 0.301961, 0.301961, 0.301961, 1 )

[node name="FemaleCharacter" parent="Spatial" instance=ExtResource( 3 )]
transform = Transform( 0.871252, 0, -0.490837, 0, 1, 0, 0.490837, 0, 0.871252, 7.82781, -0.180615, 1.95367 )

[node name="Alarm" type="SpotLight" parent="Spatial"]
transform = Transform( -0.984893, -7.56144e-008, -0.173162, -0.173162, -1.94904e-010, 0.984893, -7.45058e-008, 1, -1.29016e-008, 2.67377, 2.02882, 0.502135 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 5.68
spot_angle = 50.625

[node name="MainControls" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="Label" type="Label" parent="MainControls"]
margin_left = 80.0
margin_top = 37.0
margin_right = 507.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 5 )
text = "DAVUS"
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="MainControls"]
editor/display_folded = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -550.0
margin_right = 400.0
margin_bottom = -100.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainControls/MarginContainer"]
margin_right = 300.0
margin_bottom = 450.0
custom_constants/separation = 50
alignment = 2

[node name="StartButton" type="Button" parent="MainControls/MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 6 )
text = "btn_play"

[node name="OptionsButton" type="Button" parent="MainControls/MarginContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 300.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 6 )
text = "btn_options"

[node name="CreditsButton" type="Button" parent="MainControls/MarginContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 300.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 6 )
text = "btn_credits"

[node name="QuitButton" type="Button" parent="MainControls/MarginContainer/VBoxContainer"]
margin_top = 400.0
margin_right = 300.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 6 )
text = "btn_quit"

[node name="Credits" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Options" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -300.0
margin_right = 400.0
margin_bottom = 300.0
rect_min_size = Vector2( 800, 600 )

[node name="Options" parent="Options/MarginContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 800.0
margin_bottom = 600.0
enable_close = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "alarm"
anims/alarm = SubResource( 2 )
[connection signal="pressed" from="MainControls/MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainControls/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainControls/MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MainControls/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="closed" from="Options/MarginContainer/Options" to="." method="_on_Options_closed"]
